--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/apple_pie.html">Apple Pie</a>
+        <ul>
+        <li><a href="./recipes/apple_pie/apple_pie.html" target="_blank" rel="noopener noreferrer">Apple Pie Recipe</a></li>
+        <li><a href="./recipes/lasagna/lasagna.html" target="_blank" rel="noopener noreferrer">Easy Lasagna Recipe</a></li>
+        </ul>
     </body>
 </html>
