--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
         <li><a href="./recipes/apple_pie/apple_pie.html" target="_blank" rel="noopener noreferrer">Apple Pie Recipe</a></li>
         <li><a href="./recipes/lasagna/lasagna.html" target="_blank" rel="noopener noreferrer">Easy Lasagna Recipe</a></li>
+        <li><a href="./recipes/grilled_cheese/grilled_cheese.html" target="_blank" rel="noopener noreferrer">Jalapeno Popper Grilled Cheese</a></li>
         </ul>
     </body>
 </html>
