--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>My Favorite Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin Recipes</h1>
         <ul>
-        <li><a href="./recipes/apple_pie/apple_pie.html" target="_blank" rel="noopener noreferrer">Apple Pie Recipe</a></li>
-        <li><a href="./recipes/lasagna/lasagna.html" target="_blank" rel="noopener noreferrer">Easy Lasagna Recipe</a></li>
-        <li><a href="./recipes/grilled_cheese/grilled_cheese.html" target="_blank" rel="noopener noreferrer">Jalapeno Popper Grilled Cheese</a></li>
+        <p>
+            <li><a href="./recipes/apple_pie/apple_pie.html" target="_blank" rel="noopener noreferrer">Apple Pie Recipe</a></li>
+        </p>
+        <p>
+            <li><a href="./recipes/lasagna/lasagna.html" target="_blank" rel="noopener noreferrer">Easy Lasagna Recipe</a></li>
+        </p>
+        <p>
+            <li><a href="./recipes/grilled_cheese/grilled_cheese.html" target="_blank" rel="noopener noreferrer">Jalapeno Popper Grilled Cheese</a></li>
+        </p>
         </ul>
     </body>
 </html>
