corrected header/body for all pages, added css link to all pages

--- a/recipes/apple_pie/apple_pie.html
+++ b/recipes/apple_pie/apple_pie.html
@@ -1,23 +1,32 @@
-<h1>Apple Pie</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Apple Pie Recipe</title>
+        <link rel="stylesheet" href="../../css/style.css">
+    </head>
+    <body>
+        <h1 class="title">Apple Pie</h1>
+        <img src="./apple_pie" alt="Grandma's famous Apple Pie">
 
-<img src="./apple_pie" alt="Grandma's famous Apple Pie">
+        <h3 class="ingedients">Ingredients</h3>
+            <ul>
+                <li>8 small Granny Smith apples</li>
+                <li>Butter</li>
+                <li>Flour</li>
+                <li>Sugar</li>
+                <li>Pie crust</li>
+            </ul>
 
-<h3>Ingredients</h3>
-<ul>
-    <li>8 small Granny Smith apples</li>
-    <li>Butter</li>
-    <li>Flour</li>
-    <li>Sugar</li>
-    <li>Pie crust</li>
-</ul>
-
-<h3>Steps</h3>
-<ol>
-    <li><strong>Make the filling:</strong> On the stove, make a paste with flour and butter. Add the sugar 
-    and water and bring to a boil. Simmer, then remove from heat.</li>
-    <li><strong>Assemble the pie:</strong> Press one crust into a pie plate. Place the sliced apples on the
-    bottom crust. Use the top crust to make a lattice crust according to the recipe below. Pour the butter-sugar
-    mixture over the lattice crust.</li>
-    <li><strong>Bake the pie:</strong> Bake the pie in a preheated oven until the apples are soft and the crust is
-    golden brown.</li>
-</ol>
+        <h3>Steps</h3>
+            <ol>
+                <li><strong>Make the filling:</strong> On the stove, make a paste with flour and butter. Add the sugar 
+                and water and bring to a boil. Simmer, then remove from heat.</li>
+                <li><strong>Assemble the pie:</strong> Press one crust into a pie plate. Place the sliced apples on the
+                bottom crust. Use the top crust to make a lattice crust according to the recipe below. Pour the butter-sugar
+                mixture over the lattice crust.</li>
+                <li><strong>Bake the pie:</strong> Bake the pie in a preheated oven until the apples are soft and the crust is
+                golden brown.</li>
+            </ol>
+    </body>
+</html>
