--- a/recipes/grilled_cheese/grilled_cheese.html
+++ b/recipes/grilled_cheese/grilled_cheese.html
@@ -1,23 +1,32 @@
-<h1>Jalepeno Popper Grilled Cheese Sandwich</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Grilled Cheese Recipe</title>
+        <link rel="stylesheet" href="../../css/style.css">
+    </head>
+    <body>
+        <h1 class="title">Jalepeno Popper Grilled Cheese Sandwich</h1>
+        <img src="./grilled_cheese.webp" alt="Picture of grilled cheese sandwich">
 
-<img src="./grilled_cheese.webp" alt="Picture of grilled cheese sandwich">
+        <h3 class="ingredients">Ingredients</h3>
+            <ul>
+                <li>2oz softened cream cheese</li>
+                <li>1 tbsp sour cream</li>
+                <li>10 pickled jalepeno pepper slices - chopped</li>
+                <li>2 ciabatta sandwich rolls</li>
+                <li>4 tsp butter</li>
+                <li>8 tortilla chips, crushed</li>
+                <li>1/2 cup shredded Colby-Monterey Jack cheese</li>
+            </ul>
 
-<h3>Ingredients</h3>
-<ul>
-    <li>2oz softened cream cheese</li>
-    <li>1 tbsp sour cream</li>
-    <li>10 pickled jalepeno pepper slices - chopped</li>
-    <li>2 ciabatta sandwich rolls</li>
-    <li>4 tsp butter</li>
-    <li>8 tortilla chips, crushed</li>
-    <li>1/2 cup shredded Colby-Monterey Jack cheese</li>
-</ul>
-
-<h3>Steps</h3>
-<ol>
-    <li><strong>Step 1</strong> Combine cream cheese, sour cream, and pickled jalapeno in a small bowl. Set aside.</li>
-    <li><strong>Step 2</strong> Slice each roll in half, slice the tops off. Spread 1 teaspoon butter on both sides.
-    Place 1/2 of the cream cheese mixture, 1/2 of the crushed chips, and 1/2 of the shredded cheese on the bottom bun.</li>
-    <li><strong>Step 3</strong> Grill until lightly browned and flip over, about 3 to 5 minutes; continue grilling until cheese
-    is melted and the second side is golden brown.</li>
-</ol>
+        <h3>Steps</h3>
+            <ol>
+                <li><strong>Step 1</strong> Combine cream cheese, sour cream, and pickled jalapeno in a small bowl. Set aside.</li>
+                <li><strong>Step 2</strong> Slice each roll in half, slice the tops off. Spread 1 teaspoon butter on both sides.
+                Place 1/2 of the cream cheese mixture, 1/2 of the crushed chips, and 1/2 of the shredded cheese on the bottom bun.</li>
+                <li><strong>Step 3</strong> Grill until lightly browned and flip over, about 3 to 5 minutes; continue grilling until cheese
+                is melted and the second side is golden brown.</li>
+            </ol>
+    </body>
+</html>
