--- a/recipes/lasagna/lasagna.html
+++ b/recipes/lasagna/lasagna.html
@@ -1,23 +1,32 @@
-<h1>Easy Lasagna</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Lasagna Recipe</title>
+        <link rel="stylesheet" href="../../css/style.css">
+    </head>
+    <body>
+        <h1 class="title">Easy Lasagna</h1>
+        <img src="./lasagna.webp" alt="Picture of Lasagna">
 
-<img src="./lasagna.webp" alt="Picture of Lasagna">
+        <h3 class="ingredients">Ingredients</h3>
+        <ul>
+            <li>Ground Beef</li>
+            <li>Spaghetti Sauce</li>
+            <li>Cottage, Mozzarella, and Parmesan cheese</li>
+            <li>Eggs</li>
+            <li>Seasonings (dried parsley, salt, black pepper)</li>
+            <li>Lasagna noodles</li>
+            <li>Water</li>
+        </ul>
 
-<h3>Ingredients</h3>
-<ul>
-    <li>Ground Beef</li>
-    <li>Spaghetti Sauce</li>
-    <li>Cottage, Mozzarella, and Parmesan cheese</li>
-    <li>Eggs</li>
-    <li>Seasonings (dried parsley, salt, black pepper)</li>
-    <li>Lasagna noodles</li>
-    <li>Water</li>
-</ul>
-
-<h3>Steps</h3>
-<ol>
-    <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer.</li>
-    <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
-    <li>Assemble the lasagna according to the detailed recipe.</li>
-    <li>Bake, covered, for 45 minutes.</li>
-    <li>Uncover and continue baking for 10 minutes.</li>
-</ol>
+        <h3>Steps</h3>
+        <ol>
+            <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer.</li>
+            <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
+            <li>Assemble the lasagna according to the detailed recipe.</li>
+            <li>Bake, covered, for 45 minutes.</li>
+            <li>Uncover and continue baking for 10 minutes.</li>
+        </ol>
+    </body>
+</html>
