added styling to images, lists, headings

--- a/recipes/grilled_cheese/grilled_cheese.html
+++ b/recipes/grilled_cheese/grilled_cheese.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <h1 class="title">Jalepeno Popper Grilled Cheese Sandwich</h1>
-        <img src="./grilled_cheese.webp" alt="Picture of grilled cheese sandwich">
+        <img id="grilled_cheese" src="./grilled_cheese.webp" alt="Picture of grilled cheese sandwich">
 
-        <h3 class="ingredients">Ingredients</h3>
+        <h3 class="subhead">Ingredients</h3>
             <ul>
                 <li>2oz softened cream cheese</li>
                 <li>1 tbsp sour cream</li>
@@ -20,7 +20,7 @@
                 <li>1/2 cup shredded Colby-Monterey Jack cheese</li>
             </ul>
 
-        <h3>Steps</h3>
+        <h3 class="subhead">Steps</h3>
             <ol>
                 <li><strong>Step 1</strong> Combine cream cheese, sour cream, and pickled jalapeno in a small bowl. Set aside.</li>
                 <li><strong>Step 2</strong> Slice each roll in half, slice the tops off. Spread 1 teaspoon butter on both sides.
