--- a/recipes/lasagna/lasagna.html
+++ b/recipes/lasagna/lasagna.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <h1 class="title">Easy Lasagna</h1>
-        <img src="./lasagna.webp" alt="Picture of Lasagna">
+        <img class="picture" src="./lasagna.webp" alt="Picture of Lasagna">
 
-        <h3 class="ingredients">Ingredients</h3>
+        <h3 class="subhead">Ingredients</h3>
         <ul>
             <li>Ground Beef</li>
             <li>Spaghetti Sauce</li>
@@ -20,7 +20,7 @@
             <li>Water</li>
         </ul>
 
-        <h3>Steps</h3>
+        <h3 class="subhead">Steps</h3>
         <ol>
             <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer.</li>
             <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
