--- a/recipes/apple_pie/apple_pie.html
+++ b/recipes/apple_pie/apple_pie.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <h1 class="title">Apple Pie</h1>
-        <img src="./apple_pie" alt="Grandma's famous Apple Pie">
+        <img class="picture" src="./apple_pie" alt="Grandma's famous Apple Pie">
 
-        <h3 class="ingedients">Ingredients</h3>
+        <h3 class="subhead">Ingredients</h3>
             <ul>
                 <li>8 small Granny Smith apples</li>
                 <li>Butter</li>
@@ -18,7 +18,7 @@
                 <li>Pie crust</li>
             </ul>
 
-        <h3>Steps</h3>
+        <h3 class="subhead">Steps</h3>
             <ol>
                 <li><strong>Make the filling:</strong> On the stove, make a paste with flour and butter. Add the sugar 
                 and water and bring to a boil. Simmer, then remove from heat.</li>
