Added padding/boxing to pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1 class="title">Odin Recipes</h1>
-        <ul>
+        <ul id="recipe_list">
         <p>
             <li><a href="./recipes/apple_pie/apple_pie.html" target="_blank" rel="noopener noreferrer">Apple Pie Recipe</a></li>
         </p>
