--- a/recipes/apple_pie/apple_pie.html
+++ b/recipes/apple_pie/apple_pie.html
@@ -10,7 +10,7 @@
         <img class="picture" src="./apple_pie" alt="Grandma's famous Apple Pie">
 
         <h3 class="subhead">Ingredients</h3>
-            <ul>
+            <ul id="pie">
                 <li>8 small Granny Smith apples</li>
                 <li>Butter</li>
                 <li>Flour</li>
